tests/script/negative/duplicates/fields.s
type T = C(int f, int f);
